plugins {
  id "org.inferred.processors" version "1.2.15"
}

apply plugin: 'application'
apply plugin: 'idea'
apply plugin: 'eclipse'

sourceCompatibility = 9
targetCompatibility = 9

repositories {
     mavenCentral()
}

mainClassName = 'com.movies.explorer.MovieSearchApplication'

jar {
    manifest {
        attributes(
		"Implementation-Title": project.name,
		"Implementation-Version": '0.1.0',
		"Main-Class": mainClassName)
    }
}

applicationDefaultJvmArgs = ["--add-modules", "java.xml.bind"]

dependencies {
	processor 'org.immutables:value:2.5.6'
	compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
	implementation 'com.squareup.okhttp3:okhttp:3.10.0'
	compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
	implementation 'io.dropwizard:dropwizard-core:1.3.0'
	compile group: 'org.hsqldb', name: 'hsqldb', version: '2.4.0'

}
